fix(barcode, global.scss): make scanner video responsive (avoid overflow)

--- a/src/global.scss
+++ b/src/global.scss
@@ -48,3 +48,10 @@ app-tabs ion-tab-button {
   overflow: hidden;
   height: 100%;
 }
+
+.scanner-shell zxing-scanner video{
+  display: block;
+  object-fit: contain !important;
+  height: 100%;
+  max-height: calc(100vh - 180px);
+}
